# enigma

./: .gitignore  CMakeLists.txt  README.md
codecs/: CMakeLists.txt
codecs/cmake/: common.cmake
codecs/common/: codec.h
codecs/common/bit/: bit.h  bitstream.cpp
codecs/huffman/: CMakeLists.txt  huffman.cpp  huffman.h  tree.cpp  tree.h
codecs/huffman/test/: CMakeLists.txt  test.cpp
codecs/tests_common/: CMakeLists.txt
codecs/tools/: CMakeLists.txt
codecs/tools/benchmark/: CMakeLists.txt  benchmark.cpp
enigma/: CMakeLists.txt  main.cpp  utils.cpp
enigma/codecs/: CMakeLists.txt  enigma.cpp
enigma/common/: CMakeLists.txt  codec.cpp  codeword.cpp  dictionary.cpp  prefix_table.cpp  rle.cpp  rle.h  tree.cpp
enigma/common/bit/: bitstream.h
enigma/huffman/: CMakeLists.txt  codeword.cpp  codeword.h  huffman.cpp  prefix_table.cpp  prefix_table.h  tree.cpp
enigma/huffman/test/: CMakeLists.txt  test.cpp
enigma/include/enigma/: colors.h  utils.h
enigma/include/enigma/codecs/: enigma.h
enigma/include/enigma/common/: codec.h  codeword.h  dictionary.h  prefix_table.h  tree.h
enigma/include/enigma/frequency/: frequency.h
enigma/include/enigma/huffman/: codeword.h  huffman.h  prefix_table.h  tree.h
enigma/tests_common/: CMakeLists.txt  tests_common.cpp  tests_common.h
enigma/tools/: CMakeLists.txt  runner.cpp
tests/: CMakeLists.txt  dictionary_tests.cpp  huffman_tests.cpp  tests_common.h
tools/: CMakeLists.txt  runner.cpp
